Fix copying of turn restriction attributes